RESOLVED FIXED198801
Web Inspector: artificial context menus don't work when Web Inspector is zoomed
https://bugs.webkit.org/show_bug.cgi?id=198801
Summary Web Inspector: artificial context menus don't work when Web Inspector is zoomed
Devin Rousso
Reported 2019-06-12 14:05:34 PDT
:(
Attachments
Patch (1.56 KB, patch)
2019-06-12 14:10 PDT, Devin Rousso
no flags
Patch (1.68 KB, patch)
2019-06-12 15:12 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-06-12 14:10:19 PDT
Joseph Pecoraro
Comment 2 2019-06-12 14:17:32 PDT
Comment on attachment 371985 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=371985&action=review > Source/WebCore/inspector/InspectorFrontendHost.cpp:431 > auto& mouseEvent = downcast<MouseEvent>(event); > + > IntPoint mousePoint { mouseEvent.clientX(), mouseEvent.clientY() }; > + mousePoint.scale(zoomFactor()); Seems fine, but is there a better way to get the mouse position of zoomed content? MouseRelatedEvent.h has: // Page point in "absolute" coordinates (i.e. post-zoomed, page-relative coords, // usable with RenderObject::absoluteToLocal). const LayoutPoint& absoluteLocation() const { return m_absoluteLocation; } That ultimately uses: float FrameView::documentToAbsoluteScaleFactor(Optional<float> effectiveZoom) const { // If effectiveZoom is passed, it already factors in pageZoomFactor(). return effectiveZoom.valueOr(frame().pageZoomFactor()) * frame().frameScaleFactor(); } As opposed to the current `InspectorFrontendHost::zoomFactor()` which only does the page zoom: m_frontendPage->mainFrame().pageZoomFactor(); So, what is `frameScaleFactor` and what is that / should that be taken into account here?
Joseph Pecoraro
Comment 3 2019-06-12 15:09:11 PDT
Comment on attachment 371985 [details] Patch r=me though since this can't be worse then what we currently have
Devin Rousso
Comment 4 2019-06-12 15:12:33 PDT
WebKit Commit Bot
Comment 5 2019-06-12 15:46:20 PDT
Comment on attachment 371991 [details] Patch Clearing flags on attachment: 371991 Committed r246384: <https://trac.webkit.org/changeset/246384>
WebKit Commit Bot
Comment 6 2019-06-12 15:46:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-06-12 15:49:58 PDT
Devin Rousso
Comment 8 2019-07-07 14:58:53 PDT
*** Bug 195759 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.