Web Inspector: artificial context menus don't work when Web Inspector is zoomed https://bugs.webkit.org/show_bug.cgi?id=198801

Reviewed by Joseph Pecoraro.

* inspector/InspectorFrontendHost.cpp:
(WebCore::InspectorFrontendHost::dispatchEventAsContextMenuEvent):
Use the `absoluteLocation` of the `MouseEvent`, which takes into account zoom and scale.


Canonical link: https://commits.webkit.org/212786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246384 268f45cc-cd09-0410-ab3c-d52691b4dbfc